fix footer button and horizontal scroll

--- a/css/modals.css
+++ b/css/modals.css
@@ -100,8 +100,9 @@
 .close {
   width: 25px;
   height: 25px;
-  border-radius: 20px;
+  border-radius: 25px;
   display: flex;
+  flex-shrink: 0;
   justify-content: center;
   align-items: center;
   align-self: flex-end;
