--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,7 @@ footer {
   backdrop-filter: blur(2px);
   justify-content: space-between;
   align-items: center;
+  pointer-events: none;
 }
 .centering {
   align-content: center;
@@ -74,6 +75,8 @@ small {
   padding-left: 10px;
 }
 .btn-menu {
+  cursor: pointer;
+  pointer-events: auto;
   background: none;
   border: none;
   filter: drop-shadow(0px 5px 2px rgba(0, 0, 0, 0.5));
